Change theme name

--- a/wordpress/wp-content/themes/knock-knock/style.css
+++ b/wordpress/wp-content/themes/knock-knock/style.css
@@ -1,6 +1,6 @@
 /*
-Theme Name: Klopvaart Intranet
-Author: Mike Verbruggen
+Theme Name: Knock-Knock
+Author: Mike Verbruggen, Alex Buijs
 Description: Op maat gemaakt voor het Klopvaart Intranet
 Version: 2017
 */
