--- a/wordpress/wp-content/themes/knock-knock/style.css
+++ b/wordpress/wp-content/themes/knock-knock/style.css
@@ -1,6 +1,4 @@
 /*
-Theme Name: Knock-Knock
-Author: Mike Verbruggen, Alex Buijs
-Description: Op maat gemaakt voor het Klopvaart Intranet
+Theme Name: Knock Knock
 Version: 2017
 */
